--- a/index.html
+++ b/index.html
@@ -3,17 +3,126 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Hanna">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2425</title>
+	<title>24Kae</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2425</h1>
+	<h1>24kae-luxe sieraden</h1>
+
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Nieuwe Collectie</a></li>
+                <li><a href="#">Giftcard</a></li>
+                <li><a href="#">Verkooppunten</a></li>
+                <li><a href="#">Log in</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <!-- Introductie -->
+        <section id="introductie">
+            <h1>24Kae</h1>
+            <p>Een sieradencollectie gemaakt door Kae Sutherland in ons Amsterdamse atelier. Alle stukken zijn gemaakt van 925 sterling zilver, verguld met 18K goud.</p>
+            <a href="#" class="cta-button">Shop nu</a>
+        </section>
+
+        <!-- gifje -->
+        <section id="promotie">
+            <img src="images/kae1.gif" alt="Animatie van sieraden" class="promo-gif">
+        </section>
+
+        <!-- Product overzicht -->
+        <section id="new-collection">
+            <h2>Nieuwe Collectie</h2>
+            <div class="product-grid">
+                <!-- Product 1 -->
+                <article class="product">
+                    <img src="images/ring1.jpg" alt="Ring met gekleurde stenen en gedraaide band">
+                    <h3>Ring met gekleurde stenen</h3>
+                    <p>€109,00</p>
+                </article>
+                <!-- Product 2 -->
+                <article class="product">
+                    <img src="images/ring2.jpg" alt="Gouden ring met abstracte vormen">
+                    <h3>Gouden ring met abstracte vormen</h3>
+                    <p>€129,00</p>
+                </article>
+                <!-- Product 3 -->
+                <article class="product">
+                    <img src="images/oorbel1.jpg" alt="Oorbel met parel">
+                    <h3>Oorbel met parel</h3>
+                    <p>€149,00</p>
+                </article>
+                <!-- Product 4 -->
+                <article class="product">
+                    <img src="images/oorbel2.jpg" alt="Statement oorbel met stenen">
+                    <h3>Statement oorbel</h3>
+                    <p>€159,00</p>
+                </article>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <section id="newsletter">
+            <h2>Abonneer je op onze nieuwsbrief & ontvang 10% korting op je eerste bestelling</h2>
+            <form action="#" method="post">
+                <label for="email">E-mailadres:</label>
+                <input type="email" id="email" name="email" required>
+                <button type="submit">Abonneren</button>
+            </form>
+        </section>
+        <section id="footer-links">
+            <div>
+                <h3>Service</h3>
+                <ul>
+                    <li><a href="#">Garantie</a></li>
+                    <li><a href="#">Maattabel</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Veelgestelde vragen</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3>Volgorde</h3>
+                <ul>
+                    <li><a href="#">Verzenden</a></li>
+                    <li><a href="#">Retourneren</a></li>
+                    <li><a href="#">Betalen</a></li>
+                    <li><a href="#">Verkooppunten</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3>Info</h3>
+                <ul>
+                    <li><a href="#">Over</a></li>
+                    <li><a href="#">Algemene voorwaarden</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Disclaimer</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
+                    <li><a href="#">Sitemap</a></li>
+                </ul>
+            </div>
+        </section>
+        <section id="social-media">
+            <h3>Volg ons</h3>
+            <ul>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Pinterest</a></li>
+                <li><a href="#">TikTok</a></li>
+            </ul>
+        </section>
+    </footer>
+
 
 	<script defer src="scripts/script.js"></script>
 </body>
