--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   
   <section class="highlight-section" aria-label="Uitgelichte Producten">
     <div class="highlight-box">
-      <img src="images/strikje1.jpg" alt="Strikjes Familie">
+      <img src="images/kae1.gif" alt="Strikjes Familie">
       <div class="text-overlay">
         <h2>Strikjes Familie</h2>
         <p>NIEUW!</p>
