--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <p>✔️ BLACK WEEK 20% OFF AND 60% OFF ARCHIVE SALE!</p>
     </div>
 
+
     <!-- Hoofdnavigatie -->
     <nav class="nav-bar">
       <!-- Hamburger menu -->
@@ -24,6 +25,11 @@
         <span></span>
         <span></span>
       </label>
+    <!-- toggle menu light dark mode-->
+      <label class="switch">
+        <input type="checkbox" id="modeToggle" aria-label="Schakel tussen licht en donker modus">
+        <span class="slider round"></span>
+    </label>
 
       <!-- Logo -->
       <a href="index.html" class="logo">
