keyframes toegevoegd- animatie doet het nu

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <img src="images/mandjeicon.png" alt="Mandje icoon">
         </button>
       </div>
-
+    </nav>
  
 
     <!-- Zoekbalk -->
@@ -173,7 +173,7 @@
     <!-- Highlight Sectie -->
     <section class="highlight-section" aria-label="Uitgelichte Producten">
       <div class="highlight-box">
-        <img src="images/kae1.gif"Strikjes Familie">
+        <img src="images/kae1.gif" alt="strikjesfamilie">
         <div class="text-overlay">
           <h2>Strikjes Familie</h2>
           <p>NIEUW!</p>
