link naar tweede pagina doet het

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><a href="index.html">Shop nu</a></li>
         <li><a href="categorieen.html">Categorieën</a></li>
         <li><a href="uitgelicht.html">Uitgelicht</a></li>
-        <li><a href="cadeaus.html">Cadeaus</a></li>
+        <li><a href="statementrose.html">Cadeaus</a></li>
       </ul>
       <!-- Iconen rechts -->
       <div class="nav-icons">
@@ -211,7 +211,7 @@
         <ul class="product-list">
           <!-- Product 1 -->
           <li class="product">
-            <a href="pages//statementrose.html">
+            <a href="statementrose.html">
               <div class="product-image">
                 <img src="images/oorbellen1.png" alt="Statement roos oorbel">
               </div>
