--- a/statementrose.html
+++ b/statementrose.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="author" content="Hanna">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>24Kae | Tweede Pagina</title>
+  <title>24Kae | statement rose</title>
   <link href="styles/style.css" rel="stylesheet">
   <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
